--- a/30Mar_assign.ipynb
+++ b/30Mar_assign.ipynb
@@ -333,11 +333,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "417d850f-80dd-4b55-83f0-eb52b3afd65e",
+   "cell_type": "markdown",
+   "id": "2ada3210-4394-4019-96f8-6240454cb1d7",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Pickling and unpickling are techniques used in Python to serialize (convert an object to a byte stream) and deserialize (recreate an object from a byte stream) objects, respectively. This allows you to save a trained model to a file and later load it back into memory. Here's how you can pickle and unpickle a trained Elastic Net Regression model using Python's pickle module:\n",
     "\n",
@@ -350,6 +348,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3a215ceb-665d-4dc7-8270-66cb009a0cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  33.76505377   67.70054112   -5.23557654 -274.54102976   36.68328734]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.linear_model import ElasticNetCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Generate a random regression dataset\n",
+    "X, y = make_regression(n_samples=1000, n_features=10, noise =25, random_state=42)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Scale the data\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Create an Elastic Net model with cross-validation\n",
+    "enet = ElasticNetCV(cv=5)\n",
+    "\n",
+    "# Fit the model to the training data\n",
+    "enet.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Pickle the trained model to a file\n",
+    "with open('enet_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(enet, f)\n",
+    "\n",
+    "# Unpickle the model from the file\n",
+    "with open('enet_model.pkl', 'rb') as f:\n",
+    "    enet_loaded = pickle.load(f)\n",
+    "\n",
+    "# Use the unpickled model to make predictions on the testing data\n",
+    "y_pred = enet_loaded.predict(X_test_scaled)\n",
+    "print(y_pred[0:5])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c21dc80e-538e-4f99-8cf7-f7fbd2b39b2b",
    "metadata": {},
@@ -358,12 +407,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "207d3e1a-a381-47a3-9b27-f285942bc336",
+   "cell_type": "markdown",
+   "id": "71c680e3-0758-4c3b-be42-14f832e91af9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Pickling a model in machine learning refers to the process of serializing and saving a trained machine learning model to a file. The purpose of pickling a model is to store the trained model's state, including its architecture, parameters, and learned patterns, so that it can be easily reloaded and used later without the need to retrain it from scratch. Pickling serves several important purposes:\n",
+    "\n",
+    "Persistence: Trained machine learning models are the result of complex computations and potentially time-consuming training processes. By pickling a model, you can save its current state to a file and reuse it whenever needed. This is particularly useful when working with large datasets or resource-intensive models.\n",
+    "\n",
+    "Efficiency: Re-training a model every time you need to use it can be inefficient and time-consuming, especially when deploying the model in a production environment. Pickling allows you to avoid repetitive training and quickly load a pre-trained model when making predictions.\n",
+    "\n",
+    "Deployment: When deploying machine learning models in real-world applications, you often want to avoid the overhead of retraining the model in a live environment. Pickling allows you to package the trained model along with your application, ensuring consistent behavior across different environments.\n",
+    "\n",
+    "Scalability: Pickled models can be easily distributed to different machines or servers, making it simpler to scale your applications and distribute the prediction workload across multiple instances.\n",
+    "\n",
+    "Version Control: Pickling enables you to save different versions of a trained model. This is particularly important for reproducibility and tracking changes over time.\n",
+    "\n",
+    "Collaboration: When collaborating on machine learning projects, team members can pickle and share their trained models. This way, everyone can work with the same pre-trained model, promoting consistency and avoiding the need for each team member to independently retrain the model.\n",
+    "\n",
+    "Experimentation: Pickling models is useful during experimentation and hyperparameter tuning. You can pickle models at different stages of training and compare their performance without having to rerun the training process.\n",
+    "\n",
+    "Backup and Recovery: Storing pickled models serves as a form of backup. If something goes wrong or if a system crashes, you can recover your trained models from the pickled files.\n",
+    "\n",
+    "Python's pickle module is commonly used for pickling and unpickling objects, including machine learning models. However, it's important to note that while pickling is a convenient way to store models, it's not suitable for transferring models between different Python versions or for sharing models with untrusted sources, as it can execute arbitrary code during unpickling. For those scenarios, alternative serialization methods like JSON or joblib might be more appropriate."
+   ]
   }
  ],
  "metadata": {
